# homesensors_code

./: CMakeLists.txt  README  homesensors.cpp
include/: GpioController.h
include/app/: AirQualityController.h
include/domain/: EnvironmentalMetric.h  HistoryService.h  IHistoryService.h
include/drivers/: IDisplay.h  IHistoryStorage.h  ISensor.h  Scd40.h  SqlStorage.h
lib/: GpioController.cpp
src/: main.cpp
src/app/: AirQualityController.cpp
src/domain/: EnvironmentalMetric.cpp  HistoryService.cpp
src/drivers/: Scd40.cpp  SqlStorage.cpp
tests/: AirQualityTest.cpp  CMakeLists.txt  HistoryServiceTest.cpp  SqlStorageTest.cpp
tests/mock/: MockSensor.h  MockService.h  MockStorage.h
